[build-system]
requires = ["hatchling"]  # Or use "setuptools" if preferred
build-backend = "hatchling.build"  # Modern backend; install via pip if needed

[project]
name = "random-password-creator"
version = "0000.002"
authors = [{ name = "Giovanni Tognini Bonelli Sinclair", email = "sinclair.giovanni@gmail.com" }]
description = "A simple command-line tool to generate random and secure passwords using the Python Standard Library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"  # Specify supported Python versions
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GTBSinclair/RandomPasswordCreator"
Issues = "hthttps://github.com/GTBSinclair/RandomPasswordCreator/issues"